--- a/src/templates/landing/home.html
+++ b/src/templates/landing/home.html
@@ -547,13 +547,16 @@
 {% if not logged_user %}
 <script src="https://www.google.com/recaptcha/api.js?render={{recaptcha_site_key}}"></script>
 <script>
+    function getReCaptcha(){
         grecaptcha.ready(function() {
             grecaptcha.execute('{{recaptcha_site_key}}', {action: "/"}).then(function(token) {
                 document.getElementById('g-recaptcha-response').value = token;
                 document.getElementById('g-recaptcha-response_login').value = token;
             });
         });
-        setInterval(function(){ grecaptcha.reset(); }, 2 * 60 * 1000 );
+    }
+    getReCaptcha();
+    setInterval(function(){getReCaptcha();}, 110000);
 </script>
 {% endif %}
 <script>
