--- a/src/templates/admin/auth.html
+++ b/src/templates/admin/auth.html
@@ -9,31 +9,31 @@
     <meta name="description" content="Fuzzpass Dashboard">
     <meta name="keywords" content="Fuzzpass Dashboard">
     <meta name="author" content="Fuzzpass Dashboard">
-    <title>BCP IMPACTO DASHBOARD LOGIN</title>
+    <title>RealVirtual DASHBOARD LOGIN</title>
     <link rel="apple-touch-icon" href="">
     <link rel="shortcut icon" type="image/x-icon" href="">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600" rel="stylesheet">
 
     <!-- BEGIN: Vendor CSS-->
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}/admin_panel/vendors/css/vendors.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/admin_panel/vendors/css/vendors.min.css">
     <!-- END: Vendor CSS-->
 
     <!-- BEGIN: Theme CSS-->
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}/admin_panel/css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}/admin_panel/css/bootstrap-extended.css">
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}/admin_panel/css/colors.css">
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}/admin_panel/css/components.css">
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}/admin_panel/css/themes/dark-layout.css">
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}/admin_panel/css/themes/semi-dark-layout.css">
+    <link rel="stylesheet" type="text/css" href="/static/admin_panel/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="/static/admin_panel/css/bootstrap-extended.css">
+    <link rel="stylesheet" type="text/css" href="/static/admin_panel/css/colors.css">
+    <link rel="stylesheet" type="text/css" href="/static/admin_panel/css/components.css">
+    <link rel="stylesheet" type="text/css" href="/static/admin_panel/css/themes/dark-layout.css">
+    <link rel="stylesheet" type="text/css" href="/static/admin_panel/css/themes/semi-dark-layout.css">
 
     <!-- BEGIN: Page CSS-->
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}/admin_panel/css/core/menu/menu-types/horizontal-menu.css">
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}/admin_panel/css/core/colors/palette-gradient.css">
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}/admin_panel/css/pages/authentication.css">
+    <link rel="stylesheet" type="text/css" href="/static/admin_panel/css/core/menu/menu-types/horizontal-menu.css">
+    <link rel="stylesheet" type="text/css" href="/static/admin_panel/css/core/colors/palette-gradient.css">
+    <link rel="stylesheet" type="text/css" href="/static/admin_panel/css/pages/authentication.css">
     <!-- END: Page CSS-->
 
     <!-- BEGIN: Custom CSS-->
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}/admin_panel/assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/static/admin_panel/assets/css/style.css">
     <!-- END: Custom CSS-->
 
 </head>
@@ -55,7 +55,7 @@
                         <div class="card bg-authentication rounded-0 mb-0">
                             <div class="row m-0">
                                 <div class="col-lg-6 d-lg-block d-none text-center align-self-center px-1 py-0">
-                                    <img src="{{STATIC_URL}}/admin_panel/images/pages/login.png" alt="branding logo">
+                                    <img src="/static/admin_panel/images/pages/login.png" alt="branding logo">
                                 </div>
                                 <div class="col-lg-6 col-12 p-0">
                                     <div class="card rounded-0 mb-0 px-2">
@@ -120,17 +120,17 @@
 
 
     <!-- BEGIN: Vendor JS-->
-    <script src="{{STATIC_URL}}/admin_panel/vendors/js/vendors.min.js"></script>
+    <script src="/static/admin_panel/vendors/js/vendors.min.js"></script>
     <!-- BEGIN Vendor JS-->
 
     <!-- BEGIN: Page Vendor JS-->
-    <script src="{{STATIC_URL}}/admin_panel/vendors/js/ui/jquery.sticky.js"></script>
+    <script src="/static/admin_panel/vendors/js/ui/jquery.sticky.js"></script>
     <!-- END: Page Vendor JS-->
 
     <!-- BEGIN: Theme JS-->
-    <script src="{{STATIC_URL}}/admin_panel/js/core/app-menu.js"></script>
-    <script src="{{STATIC_URL}}/admin_panel/js/core/app.js"></script>
-    <script src="{{STATIC_URL}}/admin_panel/js/scripts/components.js"></script>
+    <script src="/static/admin_panel/js/core/app-menu.js"></script>
+    <script src="/static/admin_panel/js/core/app.js"></script>
+    <script src="/static/admin_panel/js/scripts/components.js"></script>
     <!-- END: Theme JS-->
 
     <!-- BEGIN: Page JS-->
