--- a/src/templates/admin/dashboard.html
+++ b/src/templates/admin/dashboard.html
@@ -9,33 +9,33 @@
     <meta name="description" content="Fuzzpass Dashboard">
     <meta name="keywords" content="Fuzzpass Dashboard">
     <meta name="author" content="Fuzzpass Dashboard">
-    <title>BCP IMPACTO DASHBOARD</title>
-    <link rel="apple-touch-icon" href="{{STATIC_URL}}admin_panel/app-assets/images/ico/favicon_fuzzpass.ico">
-    <link rel="shortcut icon" type="image/x-icon" href="{{STATIC_URL}}admin_panel/app-assets/images/ico/favicon_fuzzpass.ico">
+    <title>RealVirtual DASHBOARD</title>
+    {% comment %} <link rel="apple-touch-icon" href="/static/admin_panel/app-assets/images/ico/favicon_fuzzpass.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/static/admin_panel/app-assets/images/ico/favicon_fuzzpass.ico"> {% endcomment %}
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,400;1,500;1,600" rel="stylesheet">
 
     <!-- BEGIN: Vendor CSS-->
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}admin_panel/app-assets/vendors/css/vendors.min.css">
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}admin_panel/app-assets/vendors/css/charts/apexcharts.css">
+    <link rel="stylesheet" type="text/css" href="/static/admin_panel/app-assets/vendors/css/vendors.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/admin_panel/app-assets/vendors/css/charts/apexcharts.css">
     <!-- END: Vendor CSS-->
 
     <!-- BEGIN: Theme CSS-->
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}admin_panel/app-assets/css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}admin_panel/app-assets/css/bootstrap-extended.css">
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}admin_panel/app-assets/css/colors.css">
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}admin_panel/app-assets/css/components.css">
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}admin_panel/app-assets/css/themes/dark-layout.css">
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}admin_panel/app-assets/css/themes/bordered-layout.css">
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}admin_panel/app-assets/css/themes/semi-dark-layout.css">
+    <link rel="stylesheet" type="text/css" href="/static/admin_panel/app-assets/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="/static/admin_panel/app-assets/css/bootstrap-extended.css">
+    <link rel="stylesheet" type="text/css" href="/static/admin_panel/app-assets/css/colors.css">
+    <link rel="stylesheet" type="text/css" href="/static/admin_panel/app-assets/css/components.css">
+    <link rel="stylesheet" type="text/css" href="/static/admin_panel/app-assets/css/themes/dark-layout.css">
+    <link rel="stylesheet" type="text/css" href="/static/admin_panel/app-assets/css/themes/bordered-layout.css">
+    <link rel="stylesheet" type="text/css" href="/static/admin_panel/app-assets/css/themes/semi-dark-layout.css">
 
     <!-- BEGIN: Page CSS-->
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}admin_panel/app-assets/css/core/menu/menu-types/horizontal-menu.css">
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}admin_panel/app-assets/css/pages/dashboard-ecommerce.css">
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}admin_panel/app-assets/css/plugins/charts/chart-apex.css">
+    <link rel="stylesheet" type="text/css" href="/static/admin_panel/app-assets/css/core/menu/menu-types/horizontal-menu.css">
+    <link rel="stylesheet" type="text/css" href="/static/admin_panel/app-assets/css/pages/dashboard-ecommerce.css">
+    <link rel="stylesheet" type="text/css" href="/static/admin_panel/app-assets/css/plugins/charts/chart-apex.css">
     <!-- END: Page CSS-->
 
     <!-- BEGIN: Custom CSS-->
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}admin_panel/assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/static/admin_panel/assets/css/style.css">
     <!-- END: Custom CSS-->
 
 </head>
@@ -50,7 +50,7 @@
         <div class="navbar-header d-xl-block d-none">
             <ul class="nav navbar-nav">
                 <li class="nav-item"><a href="#"><span class="brand-logo">
-                            <img src="{{STATIC_URL}}img/logo-emprende-2022.png?v={{ STATIC_VERSION }}" alt="" style="width: 100px;">
+                            <img src="/static/img/logo-emprende-2022.png?v={{ STATIC_VERSION }}" alt="" style="width: 100px;">
                     </a></li>
             </ul>
         </div>
@@ -109,12 +109,12 @@
                                                 <tr>
                                                     <td>
                                                         <div class="d-flex align-items-center">
-                                                            <span class="font-weight-bolder mb-25">{{c.names}}</span>
+                                                            <span class="font-weight-bolder mb-25">{{c.user.full_name}}</span>
                                                         </div>
                                                     </td>
                                                     <td class="text-nowrap">
                                                         <div class="d-flex flex-column">
-                                                            <span class="font-weight-bolder mb-25">{{c.created}}</span>
+                                                            <span class="font-weight-bolder mb-25">{{c.user.modified}}</span>
                                                         </div>
                                                     </td>
                                                     <td>{% if c.generated_credential %}Sí{% else %}No{% endif %}</td>
@@ -139,7 +139,7 @@
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="card card-developer-meetup">
                                 <div class="meetup-img-wrapper rounded-top text-center">
-                                    <img src="{{STATIC_URL}}admin_panel/app-assets/images/illustration/email.svg" alt="Meeting Pic" height="170" />
+                                    <img src="/static/admin_panel/app-assets/images/illustration/email.svg" alt="Meeting Pic" height="170" />
                                 </div>
                                 <div class="card-body text-center">
                                     <p class="card-text mb-0">Fecha y hora</p>
@@ -204,30 +204,30 @@
     <div class="sidenav-overlay"></div>
     <div class="drag-target"></div>
 
-    <script src="{{STATIC_URL}}admin_panel/app-assets/vendors/js/vendors.min.js"></script>
+    <script src="/static/admin_panel/app-assets/vendors/js/vendors.min.js"></script>
 
-    <script src="{{STATIC_URL}}admin_panel/app-assets/vendors/js/ui/jquery.sticky.js"></script>
-    <script src="{{STATIC_URL}}admin_panel/app-assets/vendors/js/charts/apexcharts.min.js"></script>
-    <script src="{{STATIC_URL}}admin_panel/app-assets/vendors/js/extensions/toastr.min.js"></script>
+    <script src="/static/admin_panel/app-assets/vendors/js/ui/jquery.sticky.js"></script>
+    <script src="/static/admin_panel/app-assets/vendors/js/charts/apexcharts.min.js"></script>
+    <script src="/static/admin_panel/app-assets/vendors/js/extensions/toastr.min.js"></script>
 
-    <script src="{{STATIC_URL}}admin_panel/app-assets/js/core/app-menu.js"></script>
-    <script src="{{STATIC_URL}}admin_panel/app-assets/js/core/app.js"></script>
+    <script src="/static/admin_panel/app-assets/js/core/app-menu.js"></script>
+    <script src="/static/admin_panel/app-assets/js/core/app.js"></script>
 
-    <script src="{{STATIC_URL}}admin_panel/app-assets/js/scripts/pages/dashboard-ecommerce.js"></script>
+    <script src="/static/admin_panel/app-assets/js/scripts/pages/dashboard-ecommerce.js"></script>
 
     <script nonce="2726c7f26c">
         $('#export_customers').click(function(e) {
                 e.preventDefault();
-                window.location = "/api/customers/customers_list/download-xlsx/"
+                window.location = "/api/companies/customers_list/download-xlsx/"
         });
-        $('#export_schedules').click(function(e) {
+        {% comment %} $('#export_schedules').click(function(e) {
                 e.preventDefault();
                 window.location = "/api/events/scheduled_list/download-xlsx/"
         });
         $('#export_customers_events').click(function(e) {
             e.preventDefault();
-            window.location = "{% url 'events:export_event_customers' %}"
-        });
+            window.location = ""
+        }); {% endcomment %}
         $('.refresh_btn').click(function(e) {
                 e.preventDefault();
                 location.reload();
