--- a/src/templates/landing/common/_footer.html
+++ b/src/templates/landing/common/_footer.html
@@ -2,7 +2,7 @@
     <div class="grilla f aic jcsb anclaBlock" id="contact">
         <h3>{{footer.text}}</h3>
         {% if footer.mobile %}
-            <a href="#" class="footerWsp f aic jcc">
+            <a href="https://wa.me/{{footer.mobile}}" target="_blank" class="footerWsp f aic jcc">
                 <img src="/static/web/img/wsp.svg" alt="" width="60">
                 <h4>Contáctanos <span>{{footer.mobile}}</span></h4>
             </a>
