--- a/src/templates/landing/common/_header.html
+++ b/src/templates/landing/common/_header.html
@@ -239,24 +239,24 @@
                             y <a target="_blank" href="{{company.protection_data_policy.url}}">Protección de Datos Personales</a>
                             {% endif %}
                             {% if company.privacy_policy and not company.protection_data_policy and company.terms_and_conditions %}
-                            He leído y acepto las
-                            <a target="_blank" href="{{company.privacy_policy.url}}">Políticas de Privacidad</a>
-                            y <a target="_blank" href="{{company.terms_and_conditions.url}}">Términos y Condiciones.</a>
+                            He leído y acepto los
+                            <a target="_blank" href="{{company.terms_and_conditions.url}}">Términos y Condiciones.</a>
+                            y <a target="_blank" href="{{company.privacy_policy.url}}">Políticas de Privacidad</a>
                             {% endif %}
                             {% if company.privacy_policy and company.protection_data_policy and company.terms_and_conditions %}
-                            He leído y acepto las
-                            <a target="_blank" href="{{company.privacy_policy.url}}">Políticas de Privacidad</a>
-                            , <a target="_blank" href="{{company.protection_data_policy.url}}">Protección de Datos Personales</a>
-                            y <a target="_blank" href="{{company.terms_and_conditions.url}}">Términos y Condiciones.</a>
+                            He leído y acepto los
+                            <a target="_blank" href="{{company.terms_and_conditions.url}}">Términos y Condiciones.</a>
+                            , las <a target="_blank" href="{{company.privacy_policy.url}}">Políticas de Privacidad</a>
+                            y <a target="_blank" href="{{company.protection_data_policy.url}}">Protección de Datos Personales</a>
                             {% endif %}
                             {% if not company.privacy_policy and company.protection_data_policy and not company.terms_and_conditions %}
                             He leído y acepto la
                             <a target="_blank" href="{{company.protection_data_policy.url}}">Protección de Datos Personales</a>
                             {% endif %}
                             {% if not company.privacy_policy and company.protection_data_policy and company.terms_and_conditions %}
-                            He leído y acepto la
-                            <a target="_blank" href="{{company.protection_data_policy.url}}">Protección de Datos Personales</a>
-                            y <a target="_blank" href="{{company.terms_and_conditions.url}}">Términos y Condiciones.</a>
+                            He leído y acepto los
+                            <a target="_blank" href="{{company.terms_and_conditions.url}}">Términos y Condiciones.</a>
+                            y la <a target="_blank" href="{{company.protection_data_policy.url}}">Protección de Datos Personales</a>
                             {% endif %}
                             {% if not company.privacy_policy and not company.protection_data_policy and company.terms_and_conditions %}
                             He leído y acepto los
