--- a/src/templates/landing/common/_base.html
+++ b/src/templates/landing/common/_base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    {{company.code_header|safe}}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" >
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -19,13 +20,11 @@
         <link rel="stylesheet" type="text/css" href="/static/web/css-DMSans/css/styles.css?v=1{{ BUILD_ID }}"/>
     {% endif %}
     <link rel="stylesheet" href="/static/web/js/validationform/validationEngine.jquery.css">
-    <!-- <link rel="stylesheet" type="text/css" href="/static/web/css/blocks_styl.css?v=2{{ BUILD_ID }}"/> -->
 </head>
 
 
 <div class="overlay"></div>
 <div class="videoPopupContent">
-    <!-- mp4 - youtube - vimeo -->
 </div>
 {% if company.cookies_policy %}
 <div class="coockies" id="elCoockie">
@@ -38,6 +37,7 @@
 </div>
 {% endif %}
 <body class="{% block classbody %}{% endblock %}">
+    {{company.code_body|safe}}
     <div class="contentWrapper">
 
         {% include "landing/common/_header.html" %}
@@ -47,8 +47,6 @@
         </div>
         {% include "landing/common/_footer.html" %}
     </div>
-    <!-- <a href="#" class="openSidebarMobile icon-menu"></a> -->
-    <!-- <div class="sidebarContentMobile"></div> -->
     <script src="/static/web/js/jquery-3.7.1.min.js" type="text/javascript"></script>
     <script src="/static/web/js/main.js" type="text/javascript"></script>
     <script src="/static/web/js/validationform/jquery.validationEngine.js"></script>
@@ -70,7 +68,6 @@
                 validateNonVisibleFields: true
             });
 
-            //Evento form LOGIN
             $('.g8SumitLogin').click(function(e){
                 e.preventDefault();
                 var item = $(this);
