Fix company users, network user

--- a/src/templates/landing/common/_header.html
+++ b/src/templates/landing/common/_header.html
@@ -172,7 +172,7 @@
             <div class="g8GroupInput two">
                 <div class="g8Input">
                     <span>{{company.job_company_names_field_title}} *</span>
-                    <input type="text" class="g8Box validate[required]" name="{{form_register.jon_company.html_name}}">
+                    <input type="text" class="g8Box validate[required]" name="{{form_register.job_company.html_name}}">
                 </div>
                 <div class="g8Input">
                     <span>{{company.company_position_names_field_title}} *</span>
