--- a/src/templates/landing/home.html
+++ b/src/templates/landing/home.html
@@ -436,7 +436,7 @@
         <section class="b16 anclaBlock" id="networking">
             <div class="grilla">
                 <h3 class="gTitle">{{home_page.networking_section_name}}</h3>
-                {% if logged_user.allow_networking %}
+                {% if company_user.allow_networking %}
                     <div class="gParrafo">
                         <p>{{home_page.networking_description_text}}</p>
                     </div>
