--- a/src/templates/landing/encuesta.html
+++ b/src/templates/landing/encuesta.html
@@ -13,7 +13,7 @@
             <a href="##" onClick="history.go(-1); return false;" class="gReturn">Regresar</a>
             <h1 class="gTitle">Tu opinión es importante</h1>
             <div class="gParrafo">
-                <p>{{home_page.main_title}}</p>
+                <p>{{home_page.main_title|default:""}}<</p>
             </div>
         </div>
     </div>
