--- a/src/templates/landing/encuesta-gracias.html
+++ b/src/templates/landing/encuesta-gracias.html
@@ -20,7 +20,7 @@
     <div class="b11Right scrollItem">
         <h3 class="b13Title">¡Gracias por tu respuesta!</h3>
         <div class="b13Links f aic jcfs">
-            <a href="{% url 'landing:home' %}" class="gButton">Ver más eventos</a>
+            {% comment %} <a href="{% url 'landing:home' %}" class="gButton">Ver más eventos</a> {% endcomment %}
             <a href="{% url 'landing:event' %}" class="return">Regresar al evento</a>
         </div>
     </div>
