Fix - allow full screen

--- a/src/templates/landing/chat.html
+++ b/src/templates/landing/chat.html
@@ -30,7 +30,7 @@
                     <!-- imagen desktop -->
                     <img src="/static/web/img/img-banner-chat.png" width="1920" height="713"  alt="Myimage">
                 </picture>
-                <iframe src="{{event.video_url}}" frameborder="0"></iframe>
+                <iframe src="{{event.video_url}}" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="b14Right">
                 <h3>Chat</h3>
