Add footer background color to customize

--- a/src/templates/landing/common/_footer.html
+++ b/src/templates/landing/common/_footer.html
@@ -1,4 +1,4 @@
-<footer>
+<footer style="background: {{footer.background}};">
     <div class="grilla f aic jcsb anclaBlock" id="contact">
         <h3>{{footer.text}}</h3>
         {% if footer.mobile %}
